# radar-prototype

./: .npmrc  Dockerfile  build.css  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  radar-working.code-workspace  server.py
app/: layout.tsx  page.tsx
app/(prediction)/prediction/: page.tsx
app/(prediction)/prediction/form/: page.tsx
app/(prediction)/prediction/report/: page.tsx
app/(trends)/trends/: page.tsx
app/(trends)/trends/form/: page.tsx
app/(trends)/trends/report/: page.tsx
app/actions/: trends.ts
components/prediction/: prediction-form.tsx  prediction-report.tsx
components/trends/: trend-report.tsx  trend-watch.tsx
